# SinESP

./: .gitignore  README.md
esp32hi/: Makefile
esp32hi/main/: CMakeLists.txt  hello_world_main.c
lib/: sinesp_base.c  sinesp_base.h  sinesp_gpio.c  sinesp_gpio.h  sinesp_http.c  sinesp_http.h  sinesp_oled.c  sinesp_oled.h  sinesp_wifi.c  sinesp_wifi.h
web/: README.md  package-lock.json  package.json  vue.config.js
web/src/: App.vue  base.js  main.js
web/src/store/: index.js
web/src/views/: Home.vue
