idf_component_register(SRCS "hello_world_main.c"
                            "sinesp/sinesp_base.c"
                            "sinesp/sinesp_gpio.c"
                            "sinesp/sinesp_http.c"
                            "sinesp/sinesp_wifi.c"
                            "sinesp/sinesp_oled.c"
                    INCLUDE_DIRS "")